@@ -19,6 +19,13 @@ Version 0.9.9.96 - 2005/06/28
 
         ! null pointer check when retrieving status message
         
+        ! fixed window icon problem (autoswitch related)
+        
+        * added range checks for the panel splitter (don't save/load "invalid" values)
+
+        ! fixed invisible icon on the "visibility indicator" in the info panel (only, when
+          using the manual quick toggle mode).
+          
 Version 0.9.9.95 - 2005/06/28
 
         * container icon and title is now set earlier so that the container does not
